@@ -4,13 +4,12 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import software.amazon.awssdk.services.dynamodb.DynamoDbClient;
-import software.amazon.awssdk.services.dynamodb.model.AttributeValue;
-import software.amazon.awssdk.services.dynamodb.model.BatchGetItemRequest;
-import software.amazon.awssdk.services.dynamodb.model.BatchGetItemResponse;
+import software.amazon.awssdk.services.dynamodb.model.*;
 import uk.org.webcompere.systemstubs.environment.EnvironmentVariables;
 import uk.org.webcompere.systemstubs.jupiter.SystemStub;
 import uk.org.webcompere.systemstubs.jupiter.SystemStubsExtension;
 
+import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -61,24 +60,28 @@ public class DynamoClientTest {
         when(goodMessage.getRetailer()).thenReturn(goodMessageRetailer);
         List<Wmdata> messages = List.of(goodMessage);
 
-        Map<String, AttributeValue> items = new HashMap<>();
-        items.put("upc_store_retailer", AttributeValue.builder().s("123-111-wm").build());
-        items.put("upc", AttributeValue.builder().s("123").build());
-        items.put("store", AttributeValue.builder().s("100").build());
-        items.put("retailer", AttributeValue.builder().s("WM").build());
-        items.put("stock", AttributeValue.builder().n("1").build());
-        items.put("listPrice", AttributeValue.builder().n("100.00").build());
-        items.put("storePrice", AttributeValue.builder().n("9.99").build());
-        items.put("timestamp", AttributeValue.builder().n("1708103641").build());
+        DynamoDbClient mockClient = mock(DynamoDbClient.class);
 
-        Map<String, List<Map<String, AttributeValue>>> outer = new HashMap<>();
-        outer.put("pricing", List.of(items));
+        Map<String, AttributeValue> mockedItem = new HashMap<>();
+        mockedItem.put("upc_store_retailer", AttributeValue.builder().s("example_100_WM").build());
+        mockedItem.put("upc", AttributeValue.builder().s("123").build());
+        mockedItem.put("store", AttributeValue.builder().s("100").build());
+        mockedItem.put("retailer", AttributeValue.builder().s("WM").build());
+        mockedItem.put("stock", AttributeValue.builder().n("100").build());
+        mockedItem.put("listPrice", AttributeValue.builder().n("100.00").build());
+        mockedItem.put("storePrice", AttributeValue.builder().n("10.00").build());
+        mockedItem.put("timestamp", AttributeValue.builder().n("1708563838").build());
+        mockedItem.put("title", AttributeValue.builder().s("product").build());
+        mockedItem.put("image", AttributeValue.builder().s("www").build());
+        List<Map<String, AttributeValue>> mockedItems = Arrays.asList(mockedItem);
 
-        BatchGetItemResponse dynamoResponse = BatchGetItemResponse.builder()
-                .responses(outer)
+        QueryResponse mockQueryResponse = QueryResponse.builder()
+                .count(mockedItems.size())
+                .items(mockedItems)
                 .build();
 
-        when(dynamo.client.batchGetItem(any(BatchGetItemRequest.class))).thenReturn(dynamoResponse);
+        when(mockClient.query(any(QueryRequest.class))).thenReturn(mockQueryResponse);
+        dynamo.client = mockClient;
 
         List<Wmdata> results = dynamo.filterMessages(messages);
 
